# f1tenth_mpc

./: .gitignore  CMakeLists.txt  agent.Dockerfile  full_simulation.launch  package.xml  sim.Dockerfile  start.sh
explanation_docs/: MPC.md
f1tenth_gym_ros/src/: custom_params.yaml
f1tenth_mpc/: CMakeLists.txt  package.xml
f1tenth_mpc/launch/: mpc_ftg.launch
f1tenth_mpc/maps/Sochi/: Sochi_raceline.csv
f1tenth_mpc/racing/: mpc_ftg.py
launch/: full_simulation.launch  sim_launch.py
src/: MPC.md  amcl_params.yml  custom_params.yaml  echo.py  initial_pose_node.py  mpc.py  mpc_without_ros.py  path_node.py  path_vis.py  racecar.xacro  visualiser.py
src/explanation_docs/: MPC.md  crash.mkv  ftg_ranges_example.csv  plot_ftg.py  plot_ftg_2.py
src/launch/: data_for_v_plots.py  empty_sim.launch  full_simulation.launch  initialpose_node.launch  mpc.launch  mpc_centerline.launch  mpc_centerline3.launch  mpc_centerline_with_constraints.launch  mpc_constraints_with_lidar.launch  mpc_ftg.launch  mpc_node.launch  mpc_racecar2ftg.launch  mpc_raceline.launch  obstacle_launch.py  obstacles.launch  plot.py  racecar_model.launch  run_tests.py  simulator.rviz
src/logs/: curve_FTG  curve_PP1  curve_PP2  horizon_centerline  n-horizon-tests_ftg  n_horizon_centerline  n_horizon_cwc  n_horizon_ftg  n_horizon_tests  obs  obs1  obs3  obs5  obs_high_delta5  r-delta-tests_ftg  r-delta-tests_ftg_old  r-v-tests_ftg  r_delta_centerline  r_delta_cwc  r_delta_ftg  r_delta_tests  r_delta_tests_centerline_2  r_v_centerline  r_v_cwc  r_v_ftg  r_v_tests  r_v_tests_centerline  testing_curve  testlog  v_weight-tests_ftg2  v_weight_centerline  v_weight_cwc  v_weight_ftg  v_weight_tests
src/plots/: obs_1.py  (+10 more)
(+36 files in other folders)
