<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_mpc</name>
  <version>0.0.0</version>
  <description>mpc code</description>
  <maintainer email="fiona.lapp@web.de">Fiona Lapp</maintainer>
  <license>MIT</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>launch</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
